src/COMPONENTS/BrowseCardsComponent/BrowseCards.css
.browsecard {
  display: grid;
  grid-template-columns: 0.5fr 1.2fr;
  gap: 1rem;
  box-shadow: 0px 0px 5px black;
  padding: 1.5rem 0.6rem;
  border-radius: 10px;
  background-color: white;
  height: 100%;
}
.browsecardImg {
  width: 100%;
  height: 100%;
  overflow: hidden;
}
.browsecardImg img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px 10px 0 0;
  transition: all 0.3s ease-in-out;
  position: relative;
}
.likedProps{
  z-index: 1;
}
.likedProps i{
  font-size: 1.3rem;
  cursor: pointer;
}

.browsecardImg img:hover {
  transform: scale(1.1);
  filter: brightness(1);
}
.browsecardInfo {
  display: flex;
  flex-direction: column;
  line-height: 1.7rem;
  gap: 2rem;
}
.browsecardInfoTop {
  display: flex;
  gap: 1rem;
}
.browsecardInfoTop h4 {
  color: var(--Accent);
  font-size: 1.3rem;
}
.browsecardInfoBottom {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-top: rem;
  line-height: 3rem;
}
.landlrdProfile {
  display: flex;
  align-items: center;
  gap: 0.6rem;
}
.landlrdProfile img {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  object-fit: cover;
}
.browsecardsocials {
  display: flex;
  justify-content: space-between;
  gap: 1rem;
}
.browsecardsocials img {
  width: 30px;
  height: 30px;
  object-fit: cover;
}
@media (min-width: 610px) and (max-width: 950px) {
  .browsecard {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 0.8rem;
    box-shadow: 0px 0px 5px grey;
    padding: 1rem 0.6rem;
    border-radius: 10px;
    height: 100%;
  }
  .browsecardInfo {
    line-height: 1.6rem;
    gap: 0.2rem;
  }
  .browsecardImg {
    width: 100%;
    height: 100%;
  }
  .browsecardImg img {
    object-fit: cover;
  }
  .browsecardInfoTop {
    display: flex;
    flex-direction: column;
    gap: 0.2rem;
  }
  .browsecardInfoBottom {
    flex-direction: column;
    align-items: flex-start;
    line-height: 1.9rem;
    margin-top: 2rem;
  }
}
@media (max-width: 600px) {
  .browsecard {
    display: grid;
    grid-template-columns: 1fr;
    gap: 0;
    box-shadow: 0px 0px 5px grey;
    padding: 1rem 0.6rem;
    border-radius: 10px;
    height: 100%;
    width: 100%;
  }
    .browsecardInfo {
    line-height: 1.4rem;
    gap: 0.1rem;
  }
  .browsecardImg {
    width: 100%;
    height: 100%;
  }
  .browsecardInfoTop {
    flex-wrap: wrap;
  }
  .browsecardInfoTop hr {
    display: none;
  }
    .browsecardInfoBottom {
    flex-direction: column;
    align-items: flex-start;
    line-height: 2rem;
    margin-top: 0.5rem;
  }
}

